# cppa

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
benchs/: CMakeCache.txt  CMakeLists.txt  benchUtility.hpp  bench_compil_v2.cpp  bench_compil_v3.cpp  benchs.cpp  compile_time.sh  secondVersion.cpp  thirdVersion.cpp
include/cppa/: image.hpp  mystd.hpp  mystdjit.hpp
src/: firstVersion.cpp  firstVersion.hpp  image.cpp  secondVersion.hpp  thirdVersion.hpp
tests/: CMakeLists.txt  testUtility.hpp  test_dummy.cpp  test_first_version.cpp  test_lol.cpp  test_second_version.cpp  test_third_version.cpp
